--- a/src/technical.challenge.console/console.csproj
+++ b/src/technical.challenge.console/console.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <RootNamespace>console</RootNamespace>
+    <AssemblyName>technical.challenge.console</AssemblyName>
   </PropertyGroup>
 
 </Project>
