--- a/src/technical.challenge.console/console.csproj
+++ b/src/technical.challenge.console/console.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,5 +6,14 @@
     <RootNamespace>console</RootNamespace>
     <AssemblyName>technical.challenge.console</AssemblyName>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\technical.challenge.domain\domain.csproj" />
+    <ProjectReference Include="..\technical.challenge.services\services.csproj" />
+  </ItemGroup>
 
 </Project>
