--- a/src/technical.challenge.api/api.csproj
+++ b/src/technical.challenge.api/api.csproj
@@ -1,14 +1,13 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>console</RootNamespace>
-    <AssemblyName>technical.challenge.console</AssemblyName>
+    <RootNamespace>api</RootNamespace>
+    <AssemblyName>technical.challenge.api</AssemblyName>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.8" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.4" />
   </ItemGroup>
 
   <ItemGroup>
@@ -16,5 +15,6 @@
     <ProjectReference Include="..\technical.challenge.services\services.csproj" />
     <ProjectReference Include="..\tecnhical.challenge.ioc\ioc.csproj" />
   </ItemGroup>
+
 
 </Project>
