Adicionado swagger ao projeto e configurado pagina inicial

--- a/src/technical.challenge.api/Properties/launchSettings.json
+++ b/src/technical.challenge.api/Properties/launchSettings.json
@@ -8,7 +8,15 @@
       "sslPort": 44300
     }
   },
-  "profiles": {    
+  "profiles": {
+    "IIS Express": {
+      "commandName": "IISExpress",
+      "launchBrowser": true,
+      "launchUrl": "swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
+    },
     "technical.challenge.api": {
       "commandName": "Project",
       "launchBrowser": true,
